--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "filepond": "^4.23.1",
+    "filepond-plugin-file-validate-type": "^1.2.5",
+    "filepond-plugin-image-preview": "^4.6.4",
     "firebase": "^8.0.1",
     "fontsource-rajdhani": "^3.0.9",
     "fontsource-roboto": "^3.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-filepond": "^7.1.0",
     "react-map-gl": "^5.2.10",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
