--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-filepond": "^7.1.0",
     "react-map-gl": "^5.2.10",
+    "react-material-ui-carousel": "^2.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
