--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "dayjs": "^1.9.7",
     "filepond": "^4.23.1",
@@ -19,6 +20,7 @@
     "firebase": "^8.0.1",
     "fontsource-rajdhani": "^3.0.9",
     "fontsource-roboto": "^3.0.3",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-filepond": "^7.1.0",
